<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android" >
	<PreferenceCategory android:title="@string/cat_sms" android:key="cat_sms">
	    <CheckBoxPreference android:key="keyEnableSMS" android:title="@string/key_enable" android:summaryOn="@string/enable_on" android:summaryOff="@string/enable_off" android:defaultValue="true"/>
    	<CheckBoxPreference android:key="keyFromContact" android:title="@string/key_sms_option" android:summaryOn="@string/summary_contact_only" android:summaryOff="@string/summary_all_sms"/>
    	<ListPreference android:key="keyCalendarEntry" android:title="@string/key_entry" android:defaultValue="1"/>
	</PreferenceCategory>
	<PreferenceCategory android:title="@string/cat_call" android:key="cat_call">
	</PreferenceCategory>
	<PreferenceCategory android:title="@string/cat_event" android:key="cat_event">
		<Preference android:key="keyApps" android:title="@string/key_apps" android:summary="@string/summary_apps"/> 
	</PreferenceCategory>
</PreferenceScreen>
